<resources>
    <string name="app_name">Lucid Source Kit</string>
    <string name="login_background_description">Sunset with mountains and a pathway</string>
    <string name="login_password_hint">Password</string>
    <string name="login_password_unlock_button">Unlock</string>
    <string name="setup_language_title">Welcome!</string>
    <string name="setup_languages_description">Please select the language you want to use. You can change the language anytime later within the settings menu.</string>
    <string name="setup_next">Next</string>
    <string name="password_too_short">Password too short!</string>
    <string name="pin_too_short">PIN too short!</string>
    <string name="setup_security_title">Stay secure</string>
    <string name="setup_security_description">Your dream journal entries, alarms, statistics, etc. can be protected locally by enabling authentication.</string>
    <string name="setup_open_source_title">Open Source</string>
    <string name="setup_open_source_description">This app is open source. That means you can take a look at the source code at GitHub. By creating an issue you can submit bugs, feature wishes and more.\n\nBy continuing you confirm you have carefully read the README.md file on the GitHub page and accept everything stated within the document.</string>
    <string name="setup_privacy_biometrics">use biometrics</string>
    <string name="setup_experimental_title">Experimental</string>
    <string name="setup_experimental_description">This app contains experimental features that some people might not react as expected. Make sure to do your own research on topics like for example binaural beats and whether you are allowed to listen to them. Use this app at your own risk.</string>
    <string name="setup_consent_checkbox">I accept the risk</string>
    <string name="setup_auth_data_title_pin">Enter PIN to set</string>
    <string name="setup_auth_data_title_password">Enter password to set</string>
    <string name="setup_next_finish">Finish</string>
    <string name="setup_get_started_title">Get Started</string>
    <string name="setup_get_started_description">Everything was successfully set up! You are now set to check out the app. Take a look at the many settings, log and analyze your dreams, set timers and much more. Go ahead and get the full experience.</string>
    <string name="settings">Settings</string>
    <string name="third_party_licenses">Third-Party Licenses</string>
    <string name="about">About</string>
    <string name="main_image_description">hills and mountains at night</string>
    <string name="overview">Overview</string>
    <string name="active_events">active events</string>
    <string name="reality_check_reminder">Reality-Check reminder</string>
    <string name="placeholder_event">some other event</string>
    <string name="active_alarms">Active alarms</string>
    <string name="active_tonight">active tonight</string>
    <string name="collection">Collection</string>
    <string name="all_time_counts">all time counts</string>
    <string name="total_journal_entries">journal entries in total</string>
    <string name="lucid_journal_entries">lucid journal entries</string>
    <string name="goals_reached_in_total">goals reached in total</string>
    <string name="days_opening_streak">days streak opening the app</string>
    <string name="dream_journal">Dream journal</string>
    <string name="empty_dream_journal">Looks pretty empty here. Press the \'+\'-Button at bottom to add a new entry.</string>
    <string name="journal_time_at">at</string>
    <string name="dream_time">Dream time</string>
    <string name="dream_date">Date</string>
    <string name="dream_time_field">Time</string>
    <string name="dream_story_header">Dream story</string>
    <string name="dream_title">Title</string>
    <string name="dream_title_hint">Enter a dream title</string>
    <string name="dream_story">Story</string>
    <string name="dream_story_hint">Describe your dream as detailed as possible</string>
    <string name="tags">Tags</string>
    <string name="alt_tags">Add tags button</string>
    <string name="ratings_header">Ratings</string>
    <string name="dream_mood">Dream mood</string>
    <string name="alt_very_dissatisfied_smiley_rating">very dissatisfied smiley</string>
    <string name="alt_dissatisfied_smiley_rating">dissatisfied smiley</string>
    <string name="alt_neutral_smiley_rating">neutral smiley</string>
    <string name="alt_satisfied_smiley_rating">satisfied smiley</string>
    <string name="alt_very_satisfied_smiley_rating">very satisfied smiley</string>
    <string name="dream_clarity_header">Dream clarity</string>
    <string name="alt_very_unclear">very unclear</string>
    <string name="alt_unclear">unclear</string>
    <string name="alt_clear">clear</string>
    <string name="alt_very_clear">very clear</string>
    <string name="sleep_quality_header">Sleep quality</string>
    <string name="alt_very_bad_quality">very bad quality</string>
    <string name="alt_bad_quality">bad quality</string>
    <string name="alt_good_quality">good quality</string>
    <string name="alt_very_good_quality">very good quality</string>
    <string name="dream_details_header">More</string>
    <string name="dream_nightmare">Nightmare</string>
    <string name="dream_paralysis">Paralysis</string>
    <string name="dream_false_awakening">False awakening</string>
    <string name="dream_lucid">Lucid</string>
    <string name="add_journal_entry">Add Entry</string>
    <string name="save_journal_entry_changes">Save changes</string>
    <string name="add_audio">Add</string>
    <string name="close_popup">close popup</string>
    <string name="recording">Recording…</string>
    <string name="recording_paused">Recording paused</string>
    <string name="recording_delete_header">Delete recording</string>
    <string name="recording_delete_message">Are you sure you want to delete this recording?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="pause_continue_recording">pause/continue recording</string>
    <string name="stop_recording">stop recording</string>
    <string name="recording_single">Recording</string>
    <string name="recording_multiple">Recordings</string>
    <string name="no_tags_heading">No tags</string>
    <string name="no_tags_message">This journal entry has no assigned tags. Are you sure you want to add this entry without any tags?</string>
    <string name="form_not_filled">Not all fields have been filled out</string>
    <string name="entry_delete_header">Delete journal entry</string>
    <string name="entry_delete_message">Are you sure you want to delete this journal entry?</string>
    <string name="recurring">Recurring</string>
    <string name="total_journal_entries_description">This number indicates the amount of entries you have made in your dream journal. The more you have, the better they can be analyzed in your statistics.</string>
    <string name="lucid_journal_entries_description">This number indicates the amount of lucid dreams you have recorded in your dream journal. The more you practice, the higher the chance of getting lucid will become.</string>
    <string name="app_opening_streak_description">This number indicates on how many consecutive days you have opened this app at least once.</string>
    <string name="goals_reached">goals have been reached</string>
    <string name="goals_reached_description">This number indicates how many goals you have reached in total. These goals guide you at becoming more conscious throughout the day and therefore improving your awareness.</string>
    <string name="total_entries_count"><![CDATA[This data is based on a total of <TOTAL_COUNT> dream journal entries.]]></string>
    <string name="goal_achievement_stats"><![CDATA[You achieved this goal <COUNT> out of <TOTAL> times. Your success rate is <PERCENTAGE>%]]></string>
    <string name="not_enough_data_available">Not enough data available!</string>
    <string name="setup_finish_setup_title">Finish setup</string>
    <string name="setup_finish_content">The setup of the app is done. To save everything and launch the app, click the finish button.</string>
    <string name="setup_privacy_password">Enter a password below which has to be entered every time you want to open this app</string>
    <string name="setup_privacy_pin">Set a pin below which has to be entered every time you want to open this app</string>
    <string name="export_data">Export data</string>
    <string name="import_data">Import data</string>
    <string-array name="languages">
        <item>English (en)</item>
        <item>Deutsch (de)</item>
    </string-array>
    <string-array name="lock_types">
        <item>PIN</item>
        <item>Password</item>
        <item>None</item>
    </string-array>
    <string-array name="goals">
        <item>I see a yellow car</item>
        <item>I hear an owl</item>
        <item>I hear flowing water</item>
        <item>I hear a car braking</item>
        <item>I see traffic lights</item>
        <item>I feel tired</item>
        <item>I feel discouraged</item>
        <item>It feels cool to the touch</item>
    </string-array>
</resources>