<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--android:backgroundTint="#0C192A"-->

    <TextView
        android:id="@+id/txt_title_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dream_title"
        android:textColor="@color/darker_white_2x"
        android:textSize="14sp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_title_dream"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/rounded_border"
        android:backgroundTint="#1C283D"
        android:gravity="center_vertical"
        android:hint="@string/dream_title_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/darker_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_header" />

    <TextView
        android:id="@+id/txt_description_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/dream_story"
        android:textColor="@color/darker_white_2x"
        android:textSize="14sp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="@+id/txt_description_dream"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_dream" />

    <EditText
        android:id="@+id/txt_description_dream"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="@drawable/rounded_border"
        android:backgroundTint="#1C283D"
        android:gravity="fill_horizontal"
        android:hint="@string/dream_story_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minHeight="150dp"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/darker_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_description_header" />
</androidx.constraintlayout.widget.ConstraintLayout>