<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".setup.SetupPrivacyView">

    <LinearLayout
        android:id="@+id/ll_topic_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/background_scrapes"
            android:layout_width="60dp"
            android:layout_height="60dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:alpha=".2"
                android:background="@drawable/background_scrapes"
                android:backgroundTint="#030303"
                android:scaleType="fitCenter" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="3dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/background_scrapes"
                    app:tint="?attr/colorSurfaceContainer" />

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_baseline_admin_panel_settings_24"
                    app:tint="?attr/colorOutline" />
            </RelativeLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/txt_privacy_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/setup_security_title"
            android:textAlignment="center"
            android:textColor="?attr/primaryTextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_privacy_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/setup_security_description"
        android:textAlignment="center"
        android:textColor="?attr/secondaryTextColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_topic_container" />

    <Spinner
        android:id="@+id/spnr_lock_type"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="10dp"
        android:minWidth="168dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:entries="@array/lock_types"
        android:background="@drawable/rounded_spinner"
        android:backgroundTint="?attr/colorSurfaceContainer"
        app:layout_constraintBottom_toTopOf="@+id/chk_use_biometrics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/chk_use_biometrics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:minWidth="168dp"
        android:button="@android:color/transparent"
        android:drawableStart="@drawable/ic_baseline_check_box_outline_blank_24"
        android:drawablePadding="10dp"
        android:drawableTint="?attr/primaryTextColor"
        android:paddingStart="14dp"
        android:paddingEnd="24dp"
        android:text="@string/setup_privacy_biometrics"
        android:textColor="?attr/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>