<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setup.views.AuthenticationActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back_authentication"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginVertical="4dp"
        android:layout_marginStart="8dp"
        android:insetLeft="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:padding="8dp"
        app:icon="@drawable/rounded_chevron_left_24"
        app:iconSize="32dp"
        app:iconTint="?attr/colorOnSurface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="?attr/colorOutlineVariant" />

    <TextView
        android:id="@+id/txt_authentication_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="Authentication"
        android:textColor="?attr/colorOnSurface"
        android:textSize="20sp"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back_authentication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_back_authentication"
        app:layout_constraintTop_toTopOf="@+id/btn_back_authentication" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back_authentication">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/spnr_lock_type"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="32dp"
                android:layout_above="@+id/chk_use_biometrics"
                android:layout_marginTop="24dp"
                android:background="@drawable/rounded_spinner"
                android:backgroundTint="?attr/colorSurfaceContainer"
                android:entries="@array/lock_types"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="32dp"
                android:text="@string/setup_auth_data_title_password"
                android:textAlignment="center"
                android:textColor="?attr/primaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/spnr_lock_type"
                app:layout_constraintBottom_toTopOf="@+id/txt_description"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/txt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:text="@string/setup_finish_content"
                android:textAlignment="center"
                android:textColor="?attr/secondaryTextColor"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/ll_auth_container"
                app:layout_constraintTop_toBottomOf="@+id/txt_title" />

            <LinearLayout
                android:id="@+id/ll_auth_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginHorizontal="12dp"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                app:layout_constraintWidth_max="224dp"
                app:layout_constraintBottom_toTopOf="@+id/chk_use_biometrics"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <!-- Password login -->
                <EditText
                    android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="96dp"
                    android:autofillHints="password"
                    android:background="@drawable/rounded_spinner"
                    android:backgroundTint="?attr/colorSurfaceContainer"
                    android:drawableStart="@drawable/rounded_key_24"
                    android:drawablePadding="10dp"
                    android:drawableTint="?attr/tertiaryTextColor"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:padding="15dp"
                    android:textColor="?attr/primaryTextColor"
                    android:textColorHint="?attr/tertiaryTextColor"
                    android:visibility="visible" />

                <LinearLayout
                    android:id="@+id/ll_pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_entered_pin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text=""
                        android:textAlignment="center"
                        android:textColor="?attr/primaryTextColor"
                        android:textSize="32sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcv_keypad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:overScrollMode="never" />
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/chk_use_biometrics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:paddingHorizontal="8dp"
                android:text="@string/setup_privacy_biometrics"
                android:textColor="?attr/primaryTextColor"
                app:layout_constraintBottom_toTopOf="@+id/btn_save" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                style="@style/Widget.Material3.FloatingActionButton.Large.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="24dp"
                android:text="Save"
                app:icon="@drawable/rounded_save_24"
                app:iconGravity="textStart"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>